# ARL_Topologies

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cmake_script_config  code.json
fem_ofv/src/: CMakeLists.txt
fem_ofv/src/FEM/: boundarycondition.cpp  boundarycondition.h  cell.cpp  cell.h  elemedge.cpp  elemedge.h  element.cpp  element.h  femmesh.h  femproblem.cpp  femproblem.h  hexahedron.cpp  hexahedron.h  linquad.cpp  linquad.h  lintetra.cpp  lintetra.h  lintri.cpp  lintri.h  loadcondition.cpp  loadcondition.h  mesh2d.cpp  mesh2d.h  mesh3d.cpp  mesh3d.h  tetrahedron.cpp  tetrahedron.h  tofemobjfun.cpp  tofemobjfun.h  trilinhex.cpp  trilinhex.h
fem_ofv/src/FEM/unit_test/: CMakeLists.txt  test_boundarycondition.cpp  test_elemedge.cpp  test_element.cpp  test_femproblem.cpp  test_linhex.cpp  test_linquad.cpp  test_lintetra.cpp  test_lintri.cpp  test_loadcondition.cpp  test_mesh2d.cpp  test_mesh3d.cpp  test_tofemobjfun.cpp
fem_ofv/src/FEM/unit_test/inputfiles/: bctesttrimesh.txt  hexelemmat.txt  testheavimesh2d.xml  testheavimesh3d.xml  testmesh2d.xml  testmesh2dGMSH.xml  testmesh3d.xml  tof_exo_2.xml  tof_exo_3.xml  tof_exo_heavi2.xml  tof_exo_heavi3.xml  tof_gmsh_2.xml
fem_ofv/src/UTIL/: coordinatesystem.cpp  coordinatesystem.h  geometricentity.cpp  geometricentity.h  globaldefs.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h
fem_ofv/src/UTIL/unit_test/: CMakeLists.txt  test_coordinatesystem.cpp  test_geometricentity.cpp  test_point2d.cpp  test_point3d.cpp
topologies/src/: CMakeLists.txt
topologies/src/EX_INPUT/: CMakeLists.txt
topologies/src/EX_INPUT/inpfiles/: quad_mesh_hole.txt  tof_geo.xml  tooinp.xml  topopt.xml  torinp.xml
topologies/src/EX_INPUT/inpfiles_2blocks/: test2blocks.txt  test2blocks3d.txt  tof_exo.xml  tof_exo_3d.xml  tof_geo_3d.xml  topopt.xml  topopt_3d.xml
topologies/src/EX_INPUT/inpfiles_gmsh/: tof_exo.xml  topopt.xml  trimesh.msh
topologies/src/EX_INPUT/inpfiles_heavi2/: tof_geo.xml  topopt.xml
topologies/src/EX_INPUT/inpfiles_pix/: tof_geo.xml  topopt.xml
topologies/src/EX_INPUT/inpfiles_vox/: tof_geo.xml  topopt.xml  topopt_pp.xml
topologies/src/IO/: CMakeLists.txt  exotxtmeshloader.cpp  exotxtmeshloader.h  gmshtxtloader.cpp  gmshtxtloader.h  inputloader.cpp  inputloader.h  inputloaderopt.cpp  inputloaderopt.h  inputloaderrep.cpp  inputloaderrep.h  inputloadertopopt.cpp  inputloadertopopt.h  mpihandler.cpp  mpihandler.h  outputhandler.cpp  outputhandler.h  outputwriter.cpp  outputwriter.h  postprocess.cpp  postprocess.h  stltxtloader.cpp  stltxtloader.h
topologies/src/IO/unit_test/: CMakeLists.txt  test_exotxtmeshloader.cpp  test_gmshtxtloader.cpp  test_maininput.cpp  test_nodeinfo.cpp  test_postprocess.cpp  test_pugixmlwrapper.cpp  test_stltxtloader.cpp  test_toochain.cpp  test_tooga.cpp  test_toogeneric.cpp  test_torcsg.cpp  test_torgenericmesh.cpp  test_torgenericvolume.cpp
topologies/src/IO/unit_test/inputfiles/: cube.stl  nodeinfo.xml  test2blocks.msh  test2blocks.txt  testchain.xml  testcsg.xml  testga.xml  testhex.txt  testinitialguess.xml  testmesh2d.xml  testoutput.xml  testpix.xml  testpugixml.xml  testquad.txt  testtet.msh  testtet.txt  testtoo.xml  testtopopt.xml  testtri.msh  testtri.txt
topologies/src/MAIN/: CMakeLists.txt  main.cpp
topologies/src/OBJFUN/: CMakeLists.txt  topoptobjfun.cpp  topoptobjfun.h
topologies/src/OBJFUN/unit_test/: CMakeLists.txt  objfuntest.h  test_topoptobjfun.cpp
topologies/src/OPT/: CMakeLists.txt  geneticoperators.cpp  geneticoperators.h  selection.h  topopt.cpp  topopt.h  topoptchain.cpp  topoptchain.h  topoptfactory.cpp  topoptfactory.h  topoptga.cpp  topoptga.h  topoptgd.cpp  topoptgd.h  topoptnlopt.cpp  topoptnlopt.h  topoptoc.cpp  topoptoc.h  topoptuniverse.cpp  topoptuniverse.h
topologies/src/OPT/unit_test/: CMakeLists.txt  objfuntest2.h  reptest.h  test_topopt.cpp
topologies/src/OPT/unit_test/inputfiles/: bfgsinput.xml  chaininput.xml  gainput.xml  gdinput.xml  mmainput.xml  ocinput.xml
topologies/src/REP/: CMakeLists.txt  cartesianmesher.cpp  cartesianmesher.h  cgal_types.h  csgfunctionnode.cpp  csgfunctionnode.h  csgnode.cpp  csgnode.h  csgterminalnode.cpp  csgterminalnode.h  csgterminalnode3d.cpp  csgterminalnode3d.h  csgtree.cpp  csgtree.h  geometrytranslation.cpp  geometrytranslation.h  pixelrep.cpp  pixelrep.h  tomesh.cpp  tomesh.h  topoptrep.h  torfactory.cpp  torfactory.h  volmesh.cpp  volmesh.h  volmesh2d.cpp  volmesh2d.h  volmesh3d.cpp  volmesh3d.h  voxelrep.cpp  voxelrep.h
topologies/src/REP/unit_test/: CMakeLists.txt  meshtestns.h  test_cartesianmesher.cpp  test_csg.cpp  test_geometrytranslation.cpp  test_pixel.cpp  test_tomesh.cpp  test_volmesh2d.cpp  test_volmesh3d.cpp  test_voxel.cpp
topologies/src/REP/unit_test/inputfiles/: cylinder.txt  rectsolid.stl  testcsg.xml  testcsg_point.xml  testheavi2.xml  testheavi3.xml  testheavimesh3d.xml  testmesh2d_fixed.xml  testmesh3d_fixed.xml  testpix.xml  testvox.xml
topologies/src/TEST/: CMakeLists.txt  test2d.cpp  test3d.cpp
topologies/src/TEST/inputfiles/test2d/: gmsh2blockres.txt  heavi2res.txt  heavimesh2blockres.txt  mesh2autores.txt  mesh2blockres.txt  pixres.txt  pixrestri.txt  test2blocks_coarse.txt  test2d.msh  testgmsh_2blocks.xml  testheavi2.xml  testheavimesh2_2blocks.xml  testmesh2auto.xml  testmesh_2blocks.xml  testpix.xml  testpixtri.xml  tof_exo.xml  tof_geo_1load.xml  tof_geo_2loads.xml  tof_gmsh.xml
topologies/src/TEST/inputfiles/test3d/: heavi3res.txt  heavimesh3_2blocksres.txt  mesh3_2blocksres.txt  test2blocks3d.txt  testheavi3.xml  testheavimesh3_2blocks.xml  testmesh3_2blocks.xml  testvox.xml  testvoxtet.xml  tof_exo_3d.xml  tof_geo_3d.xml  voxres.txt  voxrestet.txt
topologies/src/UTIL/: CMakeLists.txt  filter2d.cpp  filter2d.h  filter3d.cpp  filter3d.h  filterbase.h  genericmaterial.cpp  genericmaterial.h  helper.cpp  helper.h  tomeshprocessing.cpp  tomeshprocessing.h  topologiesdefs.h
topologies/src/UTIL/unit_test/: CMakeLists.txt  test_filter2d.cpp  test_filter3d.cpp  test_genericmaterial.cpp  test_helper.cpp  test_tomeshprocessing.cpp
xml_schema/: femobjfun.xsd  (+3 more)
(+4 files in other folders)
