set (TOLIB_SOURCE ${TOLIB_SOURCE}
  ${CMAKE_CURRENT_SOURCE_DIR}/filter2d.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/filter3d.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/genericmaterial.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/helper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/tomeshprocessing.cpp
	PARENT_SCOPE )
#add_subdirectory(unit_test)
